# SomeApi

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: database.rs  main.rs  templates.rs
src/frontend/: 500.html  home.html  index.html  styles.css
src/locales/: v2.yaml
src/styles/: main.css
src/templates/: home.html  product.html  result_product.html
templates/: home.html  product.html  result_product.html
