[package]
name = "some_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# HARMless Stack H-HTMX A-Axum R-Rust M-Meilisearch/Missing.css

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0.192", features = ["derive"] }
openfoodfacts = { git = "https://github.com/openfoodfacts/openfoodfacts-rust.git"}
reqwest = {version = "0.12.5", features = ["blocking", "json"]}
serde_json = "1.0.108"
meilisearch-sdk = "0.25.0"
tower-http = { version = "0.5.0", features = ["full"] }
serde_derive = "1.0.192"
regex = "1.10.5"
mongodb = "3.0.1"
futures-util = "0.3.29"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
log = "0.4.20"
simple-logging = "2.0.2"
rust-i18n = "3.0.0"
openssl-sys = "0.9.103"
openssl = { version = "0.10.64", features = ["vendored"] }